--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -32,7 +32,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Test with pytest
         run: |
-          pip install requirements.txt
+          pip install -r requirements.txt
           pip install pytest
           pip install pytest-cov
           pytest test/test_load_itk.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
