--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-numpy
-pandas
-matplotlib
-jjnsegutils
-SimpleITK
-jjnsegutils
+pandas==1.0.5
+numpy==1.21.1
+coverage==5.5
+matplotlib==3.1.3
+parameterized==0.8.1
+tqdm==4.61.2
+jjnsegutils==0.1.6
+PySimpleGUI==4.49.0
+SimpleITK==2.1.1
