--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ coverage==5.5
 matplotlib==3.1.3
 parameterized==0.8.1
 tqdm==4.61.2
-jjnsegutils==0.1.6
+medutils
 PySimpleGUI==4.49.0
 SimpleITK==2.1.1
