--- a/.github/workflows/test_and_coverage.yml
+++ b/.github/workflows/test_and_coverage.yml
@@ -11,6 +11,7 @@ jobs:
         run: |
           pip install -r requirements.txt
           python ./tests/runner.py
+          bash <(curl -s https://codecov.io/bash) -f ./tests/cov_report.xml
           echo "Succesfully! Cheers!"
       - name: "Upload coverage to Codecov"
         uses: codecov/codecov-action@v2
